<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/activity_edit_address_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/address"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/activity_edit_address_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_rounded_rectangle"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/activity_edit_address_label"
            app:layout_constraintStart_toStartOf="@+id/activity_edit_address_label"
            app:layout_constraintTop_toBottomOf="@+id/activity_edit_address_label" />

        <TextView
            android:id="@+id/activity_edit_city_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/city"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/activity_edit_address_label"
            app:layout_constraintStart_toStartOf="@+id/activity_edit_address_label"
            app:layout_constraintTop_toBottomOf="@+id/activity_edit_address_edit_text" />

        <EditText
            android:id="@+id/activity_edit_city_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_rounded_rectangle"
            android:ems="10"
            android:hint="@string/enter_city_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/activity_edit_city_label"
            app:layout_constraintStart_toStartOf="@+id/activity_edit_city_label"
            app:layout_constraintTop_toBottomOf="@+id/activity_edit_city_label" />

        <TextView
            android:id="@+id/edit_activity_country_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/country"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/activity_edit_city_label"
            app:layout_constraintStart_toStartOf="@+id/activity_edit_city_label"
            app:layout_constraintTop_toBottomOf="@+id/activity_edit_city_edit_text" />

        <EditText
            android:id="@+id/activity_edit_country_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_rounded_rectangle"
            android:ems="10"
            android:hint="@string/enter_country_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/edit_activity_country_text_view"
            app:layout_constraintStart_toStartOf="@+id/edit_activity_country_text_view"
            app:layout_constraintTop_toBottomOf="@+id/edit_activity_country_text_view" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/about_me"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edit_activity_country_text_view"
            app:layout_constraintStart_toStartOf="@+id/edit_activity_country_text_view"
            app:layout_constraintTop_toBottomOf="@+id/activity_edit_country_edit_text" />

        <EditText
            android:id="@+id/activity_edit_about_me_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_rounded_rectangle"
            android:ems="10"
            android:hint="@string/enter_about_me"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_edit_about_me_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>